--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
+@import '../node_modules/@tc/tc-ngx-general/assets/tc-styles.css';
+
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
