--- a/src/app/components/manage-user/manage-user.component.html
+++ b/src/app/components/manage-user/manage-user.component.html
@@ -132,5 +132,5 @@
         
     </div>
     <!-- <lib-image-gallery #imgGallery (useImage)="setProfilePic($event)" [appName]="'Main'" [executeMessage]="'Set Profile Pic'"></lib-image-gallery> -->
-    <app-image-gallery-v2  [baseUrl]="baseUrl" [show]="showGallery" (onClose)="showGallery = false"></app-image-gallery-v2>
+    <app-image-gallery-v2 #imgGallery [baseUrl]="baseUrl" [show]="showGallery" (onClose)="showGallery = false"></app-image-gallery-v2>
 </div>
