--- a/src/app/components/image-gallery-v2/image-gallery-v2.component.html
+++ b/src/app/components/image-gallery-v2/image-gallery-v2.component.html
@@ -2,6 +2,8 @@
 
     <div style="display: flex; flex-direction: column; height: calc(100vh - 37px);">
         <div class="element-container" [ngClass]="'element-container-' + ss.style">
+            <input style="display: none" type="file" (change)="imageFromDevice($event)" accept="image/png, image/gif, image/jpeg, image/webp, image/svg" #imageInput>
+            <button class="btn btn-info" (click)="imageInput.click()">Image From Device</button>
             <h3>Albums</h3>
             <p *ngIf="addedAlbum" class="text-danger">Note: Newly created album will not be saved until an image is assigned to it</p>
             <div class="album-collection">
@@ -30,7 +32,7 @@
     </div>
 
 
-    <lib-up-slider [isActive]="currentImage !== undefined" (onClose)="currentImage = undefined">
+    <lib-up-slider [zIndex]="20" [isActive]="currentImage !== undefined" (onClose)="currentImage = undefined">
         <div class="current-image">
             <div class="current-image-holder">
                 <img #selectedImg [src]="currentImage?.src">
@@ -48,44 +50,48 @@
                 </div>
             </div>
 
-            <div class="current-image-dashboard form" *ngIf="currentImage">
-                <div class="form-group">
+            <div 
+                class="current-image-dashboard form element-container"
+                [ngClass]="'element-container-' + ss.style"
+                *ngIf="currentImage">
+                <div class="form-group element-item" [ngClass]="'element-item-'+ss.style">
                     <label class="form-label">Name</label>
                     <input class="form-control" [(ngModel)]="currentImage.record.name">
                     <button class="btn btn-primary" *ngIf="currentImage.record.id">Update Name</button>
                 </div>
-                <div class="form-group" *ngIf="!currentImage.record.id">
+                <div class="form-group element-item" [ngClass]="'element-item-'+ss.style" *ngIf="!currentImage.record.id">
                     <label class="form-label">Upload Mode</label>
                     <select class="form-select" [(ngModel)]="currentUploadMode">
-                        <option *ngFor="let uploadOption of uploadModes" [value]="uploadOption">{{uploadOption.modeName}}</option>
+                        <option *ngFor="let uploadOption of uploadModes" [ngValue]="uploadOption">{{uploadOption.modeName}}</option>
                     </select>
                     <P>{{ currentUploadMode.modeExplaination }}</P>
                 </div>
-                <div class="form-group">
+                <div class="form-group element-item" [ngClass]="'element-item-'+ss.style">
                     <input type="checkbox" class="form-check-input"  [(ngModel)]="isCropping" (change)="onCropCheck()">
                     <label class="form-check-label">Use Crop</label>
                     
                     <button class="btn btn-submit btn-primary" *ngIf="cropChanged && currentImage.record.id" (click)="onUpdateCrop()">Update Cropping</button>
                     <p *ngIf="isCropping">{{ `${squarePosition.left},${squarePosition.top},${squarePosition.left + squareSize},${squarePosition.top + squareSize}` }}</p>
                 </div>
-                <div class="form-group" *ngIf="albumList.items.length">
+                <div class="form-group element-item" [ngClass]="'element-item-'+ss.style" *ngIf="albumList.items.length">
                     <label class="form-label">Album</label>
-                    <select class="form-select" [(ngModel)]="currentImage.record.album">
+                    <select class="form-select" [(ngModel)]="currentImage.record.album" (change)="albumChanged = true">
                         <option [value]="undefined">(None)</option>
                         <option *ngFor="let album of albumList" [value]="[album]">{{album}}</option>
                     </select>
-                    <button class="btn btn-primary" *ngIf="currentImage.record.id">Update Album</button>
+                    <button class="btn btn-primary" *ngIf="currentImage.record.id && albumChanged" (click)="onAssignAlbum()">Update Album</button>
                 </div>
-                <div class="form-group">
+                <div class="form-group element-item" [ngClass]="'element-item-'+ss.style">
                     <p>Stats</p>
                     <p><b>Width: </b> {{currentImage.record.width}}</p>
                     <p><b>Height: </b> {{currentImage.record.height}}</p>
                     <p><b>Type: </b> {{currentImage.record.type}}</p>
                 </div>
                 <hr>
-                <div class="form-group">
-                    <button *ngIf="purpose != defaultPurpose && currentImage.record.id" (click)="selectImage()">Select Image</button>
-                    <button *ngIf="!currentImage.record.id" (click)="commenceImageUpload()">Upload Image</button>
+                <div class="form-group element-item" [ngClass]="'element-item-'+ss.style">
+                    <button *ngIf="purpose != defaultPurpose && currentImage.record.id" (click)="selectImage()" class="btn btn-info">Select Image</button>
+                    <button *ngIf="!currentImage.record.id" (click)="commenceImageUpload()" class="btn btn-primary">Upload Image</button>
+                    
                 </div>
             </div>
 
