--- a/src/app/components/image-gallery-v2/image-gallery-v2.component.html
+++ b/src/app/components/image-gallery-v2/image-gallery-v2.component.html
@@ -24,8 +24,9 @@
         <div class="image-gallery-holder">
             <div class="image-gallery" [@imageGalShow]="showImages ? 'expanded' : 'collapse'">
                 <div class="image-holder" *ngFor="let image of imageEntries|imageAlbumFilter:filterBy" (click)="onImageClick(image)">
-                    <img [src]="image.src">
-                    <p *ngIf="image.record.name">{{ image.record.name }}</p>
+                    <img [src]="image.src" [ngClass]="image.record.deleteOn ? 'delete-img-holder' : ''">
+                    <p *ngIf="image.record.name" class="image-name">{{ image.record.name }}</p>
+                    <p *ngIf="image.record.deleteOn" class="delete-mark">Marked for Deletion</p>
                 </div>
             </div>
         </div>        
@@ -91,7 +92,12 @@
                 <div class="form-group element-item" [ngClass]="'element-item-'+ss.style">
                     <button *ngIf="purpose != defaultPurpose && currentImage.record.id" (click)="selectImage()" class="btn btn-info">Select Image</button>
                     <button *ngIf="!currentImage.record.id" (click)="commenceImageUpload()" class="btn btn-primary">Upload Image</button>
-                    
+                    <button 
+                        class="btn" 
+                        [ngClass]="currentImage.record.deleteOn ? 'btn-white' : 'btn-danger'" 
+                        (click)="onDeleteCall()">
+                        {{ currentImage.record.deleteOn ? 'Cancel Deletion' : 'Delete' }}
+                    </button>
                 </div>
             </div>
 
