Added image Visibility Support, fixed issue where cropping remains on a non cropped image

--- a/src/app/components/image-gallery-v2/image-gallery-v2.component.css
+++ b/src/app/components/image-gallery-v2/image-gallery-v2.component.css
@@ -118,6 +118,14 @@
 
 @media (min-width: 768px) {
 
+    .btn {
+        width: 100%;
+    }
+
+    .element-item {
+        padding: 5px;
+    }
+
     .album-collection {
         justify-content: center;
         gap: 5px;
