Updated image gallery, updated dependencies

--- a/src/app/components/image-gallery-v2/image-gallery-v2.component.html
+++ b/src/app/components/image-gallery-v2/image-gallery-v2.component.html
@@ -1,4 +1,4 @@
-<lib-up-slider style="height: 100%; display:block" [useHeight]="'100%'" [isActive]="show" (onClose)="currentImage = undefined; onClose.emit()">
+<!-- <lib-up-slider style="height: 100%; display:block" [useHeight]="'100%'" [isActive]="show" (onClose)="currentImage = undefined; onClose.emit()">
 
     <div style="display: flex; flex-direction: column; height: calc(100vh - 37px);">
         <div class="element-container" [ngClass]="'element-container-' + ss.style">
@@ -121,4 +121,4 @@
 
 
 
-</lib-up-slider>
+</lib-up-slider> -->
