Added custom styling support to App

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -22,6 +22,8 @@
             <li class="nav-item" style="padding-left:5px;"><a class="nav-link" (click)="doNavigate('/sessions')">Sessions</a></li>
             <li class="nav-item" style="padding-left:5px;"><a class="nav-link" (click)="doNavigate('/mfa')">Multi-Factor Auth</a></li>
             <li class="nav-item" style="padding-left:5px;"><a class="nav-link" (click)="doNavigate('/address')">Addresses</a></li>
+            
+            <li class="nav-item" style="padding-left:5px;"><a class="nav-link" (click)="doNavigate('/styles')">Styles</a></li>
               
             <li class="nav-item" style="padding-left:5px;"><button class="nav-link btn btn-submit" (click)="logout()">Log-Out</button></li>
         </ul>
