--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,19 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     padding: 4rem 2rem;
 }
 
+.flex-and-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+}
+
+.flex-and-bottom {
+    display: flex;
+    justify-content: center;
+    align-items:end;
+}
+
 
 /* Regular Red Button */
 
